# Virgo

./: CMakeLists.txt  ChangeLog.txt  LICENSE
batch/: debug_x86_01_build.bat  debug_x86_02_deployqt.bat  x86_01_build.bat  x86_02_deployqt.bat
src/: CMakeLists.txt  EpubOPFParseContext.cpp  EpubOPFParseContext.h  EpubParser.cpp  EpubParser.h
src/EpubInfo/: Manifest.cpp  Manifest.h  Metadata.cpp  Metadata.h  OPFData.cpp  OPFData.h  Spine.cpp  Spine.h  TocNcx.cpp  TocNcx.h  TocXhtml.cpp  TocXhtml.h
src/Misc/: EpubUtil.cpp  EpubUtil.h  Utility.cpp  Utility.h
